--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Xtract Lite</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/eighty20.ico')}}">
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css')}}">
 </head>
 <body>
     <div id="app"></div>
